--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/Index.cshtml
@@ -5,60 +5,88 @@
 <div class="index-body d-grid min-vh-100">
     <header class="border-bottom border-2 bg-white">
         <partial name="_Navbar"></partial>
-        <div class="headerFilterSectionContainer">
-            <partial name="_HeaderFilterSection"></partial>
+        <section class="container d-flex flex-column flex-md-row justify-content-md-between">
+    <div class="d-flex justify-content-between index-header-section bg-white py-2">
+        <div class="d-flex">
+            <img src="~/images/static/search.png" alt="search" class="h-50 my-auto me-2">
+            <input type="search" id="Search" placeholder="Search missions..." class="form-control">
         </div>
+
+        <img src="~/images/static/filter.png" alt="filter"
+            class="h-50 my-auto d-md-none cursor-pointer filter-toggle-btn">
+    </div>
+    <div
+        class="filter-menu d-flex flex-column mb-3 mb-md-0 w-100 align-items-center flex-sm-row justify-content-end">
+        <div class="filter-item border p-1 p-md-0 py-md-2 w-100">
+            <div class="dropdown">
+                <button
+                    class="fw-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                    type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Country
+                    <img src="~/images/static/drop-down.png" alt="drop-down" class="d-inline">
+                </button>
+                <ul class="dropdown-menu" id="countryDropdown">
+                @foreach(CountryVM country in Model.countryVM){
+                    <li class="dropdown-item" data-id="@country.CountryId">@country.CountryName</li>
+                }
+                </ul>
+            </div>
+        </div>
+        <div class="filter-item border p-1 p-md-0 py-md-2 w-100">
+            <div class="dropdown">
+                <button
+                    class="fw-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                    type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    City
+                    <img src="~/images/static/drop-down.png" alt="drop-down" class="d-inline">
+                </button>
+                <ul class="dropdown-menu" id="cityDropdown">
+                @foreach(CityVM city in Model.cityVM){
+                    <li class="dropdown-item" data-country="@city.CountryId" data-id="@city.CityId">@city.CityName</li>
+                }
+                </ul>
+            </div>
+        </div>
+        <div class="filter-item border p-1 p-md-0 py-md-2 w-100">
+            <div class="dropdown">
+                <button
+                    class="fw-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                    type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Theme
+                    <img src="~/images/static/drop-down.png" alt="drop-down" class="d-inline">
+                </button>
+                <ul class="dropdown-menu" id="themeDropdown">
+                @foreach(MissionThemeVM theme in Model.missionThemeVM){
+                    <li class="dropdown-item" data-id="@theme.MissionThemeId">@theme.MissionThemeName</li>
+                }
+                </ul>
+            </div>
+        </div>
+        <div class="filter-item border p-1 p-md-0 py-md-2 w-100">
+            <div class="dropdown">
+                <button
+                    class="fw-light w-100 d-flex justify-content-between align-items-center btn dropdown-toggle color-darkgray"
+                    type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Skill
+                    <img src="~/images/static/drop-down.png" alt="drop-down" class="d-inline">
+                </button>
+                <ul class="dropdown-menu" id="skillDropdown">
+                @foreach(SkillVM skill in Model.skillVM){
+                    <li class="dropdown-item" data-id="@skill.SkillId">@skill.SkillName</li>
+                }
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
     </header>
     <main class="container py-4">
-        <div class="on-filter-list d-flex flex-wrap gap-1 mb-4"></div>
+        <div class="on-filter-list d-flex flex-wrap gap-1"></div>
         <section class="no-mission h3 text-center color-darkgray d-none">No mission found</section>
-        
-        <section class="index-top d-flex justify-content-between align-items-center mb-4">
-            <div class="index-top-title color-darkgray">
-                <span class="fw-light">Explore </span><span class="total-missions">@Model.missionVM.Count()</span> missions
-            </div>
-            <div class="d-flex gap-1 align-items-center">
-                <div class="dropdown border rounded me-3">
-                    <button class="btn color-darkgray dropdown-toggle fw-light" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false"
-                        >
-                        Sort by
-                        <img src="~/images/static/drop-down.png" alt="drop-down" class="d-inline ms-1 ms-md-5">
-                    </button>
-                    <ul class="dropdown-menu" id="sortDropdown">
-                        <li class="dropdown-item">Newest</li>
-                        <li class="dropdown-item">Oldest</li>
-                        <li class="dropdown-item">Highest available seats</li>
-                        <li class="dropdown-item">Lowest available seats</li>
-                        <li class="dropdown-item">My favourites</li>
-                        <li class="dropdown-item">Registration deadline</li>
-                    </ul>
-                </div>
-                <div class="p-1 rounded-circle d-none d-md-block active-index-view cursor-pointer grid-btn">
-                    <img src="~/images/static/grid.png" alt="grid-view">
-                </div>
-                <div class="p-1 rounded-circle d-none d-md-block cursor-pointer list-btn">
-                    <img src="~/images/static/list.png" alt="list-view">
-                </div>
-            </div>
-        </section>
-
-        <div id="partialViewContainer">
+        <div id="partialViewContainer" data-model="@Html.Raw(Json.Serialize(Model.missionVM.Count()))">
             <partial name="_IndexMissions"></partial>
         </div>
-        <div class="page-btn-container d-flex justify-content-center gap-1 mt-5">
-            <button class="btn rounded border border-2"><img src="~/images/static/previous.png" alt="previous"></button>
-            <button class="btn rounded border border-2"><img src="~/images/static/left.png" alt="left"></button>
-            <button
-                class="page-btn btn rounded border border-2 shadow-sm color-darkgray fw-light active-page-btn">1</button>
-            <button class="page-btn btn rounded border border-2 shadow-sm color-darkgray fw-light">2</button>
-            <button class="page-btn btn rounded border border-2 shadow-sm color-darkgray fw-light">3</button>
-            <button class="page-btn btn rounded border border-2 shadow-sm color-darkgray fw-light">4</button>
-            <button class="page-btn btn rounded border border-2 shadow-sm color-darkgray fw-light">5</button>
-            <button class="btn rounded border border-2"><img src="~/images/static/right-arrow1.png"
-                    alt="right"></button>
-            <button class="btn rounded border border-2"><img src="~/images/static/next.png" alt="next"></button>
-        </div>
+        <div id="pagination" class="d-flex justify-content-center gap-1 mt-5"></div>
     </main>
     <partial name="_Footer"></partial>
 </div>
