--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/_IndexMissions.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Home/_IndexMissions.cshtml
@@ -11,11 +11,11 @@
             <div class="card shadow-sm h-100">
                 <div class="position-relative card-top">
                     <a href="#">
-                        <img src="@mission.MissionMedia"
+                        <img src="@mission.MissionThumbnail"
                          class="card-img-top h-100 object-fit-cover" alt="mission image">
                     </a>
                     <div class="position-absolute p-2 rounded-pill index-city d-flex gap-1 align-items-center">
-                        <img src="/images/static/pin.png" alt="pin"><span class="text-light fw-light text-14">@mission.MissionCity</span>
+                        <img src="/images/static/pin.png" alt="pin"><span class="text-light fw-light text-14">@mission.CityVM.CityName</span>
                     </div>
                     @if (!string.IsNullOrEmpty(userId) && mission?.FavouriteMissionVM?.LongCount() > 0 && mission.FavouriteMissionVM.Any(fm => fm.UserId == long.Parse(userId)))
                     {
@@ -46,7 +46,7 @@
                         </span>
                     }
                     <div class="bg-white rounded-pill mx-auto translate-middle-y px-2 py-1 width-max-conatent fw-light mb-n2">
-                        @mission.MissionThemeName
+                        @mission.MissionThemeVM.MissionThemeName
                     </div>
                 </div>
                 <div class="card-body color-darkgray">
@@ -198,11 +198,11 @@
                 <div class="h-100 position-relative col-4 col-lg-3">
                     <a href="#">
 
-                        <img src="@mission.MissionMedia"
+                        <img src="@mission.MissionThumbnail"
                          class="rounded-start h-100 w-100 object-fit-cover" alt="mission image">
                     </a>
                     <div class="position-absolute p-2 rounded-pill index-city d-flex gap-1 align-items-center">
-                        <img src="/images/static/pin.png" alt="pin"><span class="text-light fw-light text-14">@mission.MissionCity</span>
+                        <img src="/images/static/pin.png" alt="pin"><span class="text-light fw-light text-14">@mission.CityVM.CityName</span>
                     </div>
                     @if (!string.IsNullOrEmpty(userId) && mission?.FavouriteMissionVM?.LongCount() > 0 && mission.FavouriteMissionVM.Any(fm => fm.UserId == long.Parse(userId)))
                     {
@@ -233,7 +233,7 @@
                         </span>
                     }
                     <div class="bg-white rounded-pill mx-auto translate-middle-y px-2 py-1 width-max-conatent fw-light">
-                        @mission.MissionThemeName
+                        @mission.MissionThemeVM.MissionThemeName
                     </div>
                 </div>
                 <div class="card-body col-8 col-lg-9 color-darkgray">
@@ -241,7 +241,7 @@
                         <div class="d-flex gap-4 align-items-center">
                             <div class="d-flex align-items-center gap-2">
                                 <img src="/images/static/web.png" alt="web">
-                                <span>@mission.MissionThemeName</span>
+                                <span>@mission.MissionThemeVM.MissionThemeName</span>
                             </div>
                             <div class="d-flex align-items-center gap-2">
                                 <img src="/images/static/organization.png" alt="organization">
