--- a/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/MissionDetails.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Areas/Volunteer/Views/Mission/MissionDetails.cshtml
@@ -1,81 +1,143 @@
-﻿@{
+﻿@using CI_Platform.Entities.Constants
+@model MissionVM
+@{
     ViewData["Title"] = "Mission Details";
     var userId = Context.Session.GetString("UserId");
 }
 <partial name="_Navbar"></partial>
 <section class="container mp-top d-flex flex-column flex-lg-row py-4 gap-4 align-items-center">
     <div>
-        <img src="/images/static/CSR-initiative-stands-for-Coffee--and-Farmer-Equity-2.png" alt="mission image">
-        <div class="position-relative">
-            <div class="d-flex mp-small-images overflow-scroll">
-                <img src="/images/static/Grow-Trees-On-the-path-to-environment-sustainability.png" alt="mission image">
-                <img src="/images/static/Animal-welfare-&-save-birds-campaign.png" alt="mission image">
-                <img src="/images/static/Plantation-and-Afforestation-programme.png" alt="mission image">
-                <img src="/images/static/img1.png" alt="mission image">
-                <img src="/images/static/img22.png" alt="mission image">
-                <img src="/images/static/Grow-Trees-On-the-path-to-environment-sustainability.png" alt="mission image">
-                <img src="/images/static/Animal-welfare-&-save-birds-campaign.png" alt="mission image">
-                <img src="/images/static/Plantation-and-Afforestation-programme.png" alt="mission image">
-                <img src="/images/static/img1.png" alt="mission image">
-                <img src="/images/static/img22.png" alt="mission image">
-                <div class="mp-left-scroll position-absolute d-flex align-items-center justify-content-center px-2 h-100 cursor-pointer">
-                    <img src="/images/static/left1.png" alt="left arrow">
-                </div>
-                <div class="mp-right-scroll position-absolute d-flex align-items-center justify-content-center px-2 h-100 end-0 cursor-pointer">
-                    <img src="/images/static/right-arrow2.png" alt="left arrow">
+        <img src="@Model.MissionThumbnail" alt="mission image">
+        @if (@Model.MissionMediaVM.Count() > 1)
+        {
+            <div class="position-relative">
+                <div class="d-flex mp-small-images overflow-scroll">
+                    @foreach (MissionMediaVM mm in @Model.MissionMediaVM)
+                    {
+                        <img src="@mm.MediaPath@mm.MediaName@mm.MediaType" alt="mission image">
+                    }
+                    <div class="mp-left-scroll position-absolute d-flex align-items-center justify-content-center px-2 h-100 cursor-pointer">
+                        <img src="/images/static/left1.png" alt="left arrow">
+                    </div>
+                    <div class="mp-right-scroll position-absolute d-flex align-items-center justify-content-center px-2 h-100 end-0 cursor-pointer">
+                        <img src="/images/static/right-arrow2.png" alt="left arrow">
+                    </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
     <div class="color-darkgray">
-        <h4 class="fw-light">CSR initiative stands for Coffee and Farmer Equity</h4>
+        <h4 class="fw-light">@Model.Title</h4>
         <p class="fw-light text-14">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos neque,
-            odit voluptas libero facilis officiis!
+            @Model.ShortDescription
         </p>
-        <div class="bg-white rounded-pill px-2 mx-auto py-1 width-max-conatent -translate-middle-y border fw-light mt-n1 text-14">
-            Plant 10,000 Trees
-        </div>
-        <div class="d-flex justify-content-around color-darkgray border-top py-2 pt-3 gap-3">
-            <div class="d-flex align-items-center gap-3 flex-shrink-0">
-                <img src="/images/static/Seats-left.png" alt="Seats-left">
-                <div>
-                    <div>10</div>
-                    <div class="fw-light text-14">Seats left</div>
-                </div>
+        @if (@Model.Status == MissionStatus.ONGOING)
+        {
+            <div class="bg-white rounded-pill px-2 mx-auto py-1 width-max-conatent -translate-middle-y border fw-light mt-n1 text-14">
+                @if (@Model.MissionType == MissionType.GOAL)
+                {
+                    <span>@Model.MissionGoalVM.GoalObjective</span>
+                }
+                else if (@Model.StartDate != null && @Model.EndDate != null)
+                {
+                    <span>
+                        From @Model.StartDate?.ToString("d") untill @Model.EndDate?.ToString("d")
+                    </span>
+                }
+                else
+                {
+                    <span>Ongoing Opportunity</span>
+                }
             </div>
-            <div class="d-flex align-items-center gap-2 flex-shrink-0 d-none">
-                <img src="/images/static/deadline.png" alt="deadline">
-                <div>
-                    <div>09/01/2019</div>
-                    <div class="fw-light text-14">Deadline</div>
-                </div>
-            </div>
-            <div class="d-flex align-items-center gap-2">
-                <img src="/images/static/achieved.png" alt="achieved">
-                <div>
-                    <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50"
-                         aria-valuemin="0" aria-valuemax="100" style="height:0.5rem; width: 100%;">
-                        <div class="progress-bar bg-light-orange" style="width: 70%"></div>
+            <div class="d-flex justify-content-around color-darkgray border-top py-2 pt-3 gap-3">
+                @if (@Model.RegistrationDeadline != null && @Model.RegistrationDeadline < DateTime.Now)
+                {
+                    <div class="d-flex align-items-center gap-3">
+                        <img src="/images//static/Already-volunteered.png" alt="Seats-left">
+                        <div>
+                            @if (@Model.MissionApplicationVM == null)
+                            {
+                                <div>0</div>
+                            }
+                            else
+                            {
+                                <div>@Model.MissionApplicationVM.LongCount()</div>
+                            }
+                        </div>
                     </div>
-                    <div class="fw-light text-14">8000 Achieved</div>
-                </div>
+                }
+                else if (@Model.TotalSeats != null)
+                {
+                    <div class="d-flex align-items-center gap-3 flex-shrink-0">
+                        <img src="/images/static/Seats-left.png" alt="Seats-left">
+                        <div>
+                            <div>@Model.SeatsLeft</div>
+                            <div class="fw-light text-14">Seats left</div>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    <div class="d-flex align-items-center gap-3">
+                        <img src="/images//static/Already-volunteered.png" alt="Seats-left">
+                        <div>
+                            @if (@Model.MissionApplicationVM == null)
+                            {
+                                <div>0</div>
+                            }
+                            else
+                            {
+                                <div>@Model.MissionApplicationVM.LongCount()</div>
+                            }
+                        </div>
+                    </div>
+                }
+                @if (@Model.RegistrationDeadline != null)
+                {
+                    <div class="d-flex align-items-center gap-2 flex-shrink-0">
+                        <img src="/images/static/deadline.png" alt="deadline">
+                        <div>
+                            <div>09/01/2019</div>
+                            <div class="fw-light text-14">Deadline</div>
+                        </div>
+                    </div>
+                }
+                @if (@Model.MissionType == MissionType.GOAL)
+                {
+                    var value = @Model.MissionGoalVM.GoalValue;
+                    var achieved = @Model.MissionGoalVM.GoalAchieved != null ? @Model.MissionGoalVM.GoalAchieved : 1;
+                    var percentage = achieved * 100 / value;
+                    <div class="d-flex align-items-center gap-2 flex-grow-1">
+                        <img src="/images/static/achieved.png" alt="achieved">
+                        <div>
+                            <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="50"
+                         aria-valuemin="0" aria-valuemax="100" style="height:0.5rem; width: 100%;">
+                                <div class="progress-bar bg-light-orange" style="width: @percentage%"></div>
+                            </div>
+                            <div class="fw-light text-14">@Model.MissionGoalVM.GoalAchieved Achieved</div>
+                        </div>
+                    </div>
+                }
             </div>
-        </div>
-        <hr class="m-0 bg-secondary">
-        <div class="my-3 d-flex flex-column gap-2 flex-md-row">
-            <a href="#"
+            <hr class="m-0 bg-secondary">
+            <div class="my-3 d-flex flex-column gap-2 flex-md-row">
+                <a href="#"
                class="btn rounded-pill d-flex align-items-center gap-2 border border-dark w-100 justify-content-center fw-light text-15 color-darkgray">
-                <img src="/images/static/heart1.png" alt="heart">
-                Add to Favourite
-            </a>
-            <a href="#"
+                    <img src="/images/static/heart1.png" alt="heart">
+                    Add to Favourite
+                </a>
+                <a href="#"
                class="btn rounded-pill d-flex align-items-center gap-2 border border-dark w-100 justify-content-center fw-light text-15 color-darkgray">
-                <img src="/images/static/add1.png" alt="user">
-                Recommand to Co-Worker
-            </a>
-        </div>
+                    <img src="/images/static/add1.png" alt="user">
+                    Recommand to Co-Worker
+                </a>
+            </div>
+        }
         <hr class="m-0 bg-secondary mt-4">
+        @*@if ((!string.IsNullOrEmpty(userId) && @Model?.MissionApplicationVM?.LongCount() > 0 &&
+            @Model.MissionApplicationVM.Any(ma => ma.UserId == long.Parse(userId) && ma.ApprovalStatus == ApprovalStatus.APPROVED)))
+        {*@
+            
         <div class="d-flex align-items-center translate-middle-y bg-white width-max-conatent mx-auto">
             <img src="/images/static/star-empty.png" alt="star empty">
             <img src="/images/static/star-empty.png" alt="star empty">
@@ -83,6 +145,7 @@
             <img src="/images/static/star-empty.png" alt="star empty">
             <img src="/images/static/star-empty.png" alt="star empty">
         </div>
+        @*}*@
         <div class="row g-3 row-cols-2 row-cols-md-4">
             <div class="col">
                 <div class="border rounded p-2 h-100 d-flex justify-content-between flex-column align-items-start gap-2">
@@ -92,7 +155,7 @@
                             City
                         </div>
                         <div class="text-15">
-                            Toronto
+                            @Model.CityVM.CityName
                         </div>
                     </div>
                 </div>
@@ -105,7 +168,7 @@
                             Theme
                         </div>
                         <div class="text-15">
-                            Environment
+                            @Model.MissionThemeVM.MissionThemeName
                         </div>
                     </div>
                 </div>
@@ -131,14 +194,21 @@
                             Organization
                         </div>
                         <div class="text-15">
-                            CSE Network
+                            @Model.OrganizationName
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <a href="#" class="btn button d-flex gap-2 align-items-center mx-auto mt-3 width-max-conatent">
-            Apply Now
+            @if ((!string.IsNullOrEmpty(userId) && @Model?.MissionApplicationVM?.LongCount() > 0 &&
+            @Model.MissionApplicationVM.All(ma => ma.UserId != long.Parse(userId)))
+            || @Model.Status == MissionStatus.ONGOING
+            || @Model?.SeatsLeft > 0
+            || @Model?.RegistrationDeadline >= DateTime.Now)
+            {
+                <span>Apply</span>
+            }
             <img src="/images/static/right-arrow.png" alt="rigth arrow">
         </a>
     </div>
@@ -275,21 +345,44 @@
                 </div>
                 <div class="d-flex gap-4 text-15 fw-light text-secondary border-bottom pb-3">
                     <span>Skills</span>
-                    <div>Cool, Easy going, Math</div>
+                    <div>
+                        @foreach (string skill in @Model.SkillList)
+                        {
+                            <span>@skill</span>
+                        }
+                    </div>
                 </div>
                 <div class="d-flex gap-4 text-15 fw-light text-secondary border-bottom py-3">
                     <span>Days</span>
-                    <div>Weekend only</div>
+                    @if (@Model.Availability == MissionAvailability.DAILY)
+                    {
+                        <div>Daily</div>
+                    }
+                    else if (@Model.Availability == MissionAvailability.MONTHLY)
+                    {
+                        <div>Monthly</div>
+                    }
+                    else if (@Model.Availability == MissionAvailability.WEEK_END)
+                    {
+                        <div>Week end only</div>
+                    }
+                    else
+                    {
+                        <div>Weekly</div>
+                    }
                 </div>
                 <div class="d-flex gap-3 text-15 fw-light text-secondary pt-3">
                     <span>Rating</span>
                     <div class="d-flex align-items-center flex-wrap">
-                        <img src="/images/static/selected-star.png" alt="star">
-                        <img src="/images/static/selected-star.png" alt="star">
-                        <img src="/images/static/selected-star.png" alt="star">
-                        <img src="/images/static/selected-star.png" alt="star">
-                        <img src="/images/static/selected-star.png" alt="star">
-                        (by 125 volunteers)
+                        @for (byte i = 0; i < @Model.MissionRating; i++)
+                        {
+                            <img src="/images/static/selected-star.png" alt="selected-star">
+                        }
+                        @for (byte i = 0; i < 5 - @Model.MissionRating; i++)
+                        {
+                            <img src="/images/static/star.png" alt="star">
+                        }
+                        (by @Model?.MissionRatingVM?.Count() volunteers)
                     </div>
                 </div>
             </div>
@@ -608,5 +701,5 @@
 <partial name="_Footer"></partial>
 
 @section Scripts{
-    <script src="/js/mission.js"></script>
+<script src="/js/mission.js"></script>
 }
