--- a/MVC/CI-Platform/CI-PlatformWeb/Views/Shared/_Layout.cshtml
+++ b/MVC/CI-Platform/CI-PlatformWeb/Views/Shared/_Layout.cshtml
@@ -10,13 +10,11 @@
     <link rel="stylesheet" href="~/CI_PlatformWeb.styles.css" asp-append-version="true" />
 </head>
 <body>
-
-    <main role="main">
-        @RenderBody()
-    </main>
+    @RenderBody()
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
